added a couple of tests to index.html.erb_spec.rb, and made them suspiciously pass withsuperficial changes to the view. Suspect this implies existing tests are inadequate?

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -16,6 +16,10 @@
         <p><%= @stats[:members][:count] %> AgileVentures Members</p>
 
         <p><%= @stats[:documents][:count] %> Documents Created</p>
+
+        <p><%= @stats[:pairing_minutes][:count] %> Pair Programming Minutes</p>
+
+        <p><%= @stats[:scrum_minutes][:count] %> Scrum Minutes</p>
       </div>
     </div>
     <div class="tab-pane" id="activity-feed">
