refactored cukes in 'dashboard_stats.feature'

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -17,7 +17,7 @@
 
         <p><%= @stats[:documents][:count] %> Documents Created</p>
 
-        <p><%= @stats[:pairing_minutes][:count] %> Pair Programming Minutes</p>
+        <p><%= @stats[:pairing_minutes][:minutes] %> Pair Programming Minutes</p>
 
         <p><%= @stats[:scrum_minutes][:count] %> Scrum Minutes</p>
       </div>
