--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,14 +26,14 @@
               <li class="media-item col-md-4 col-sm-6 col-xs-12">
                 <a class="user-preview" href="<%= user_path(user) %>">
                   <%= presenter.gravatar_image(size: 80,
-                 class: "img-rounded media-object pull-left") %>
+                 class: 'img-rounded media-object pull-left') %>
                <div class="media-body index-summary">
                  <p class="media-heading"><%= presenter.display_name %></p>
                  <% if presenter.has_title? %>
                    <p><%= presenter.title_list %></p>
                  <% end %>
-                 <% if user.country? %>
-                   <p><%= presenter.country %></p>
+                 <% if user.country_name? %>
+                   <p><%= presenter.country_name %></p>
                  <% end %>
                </div>
                 </a>
