changed text on dashboard's index to links (and updated spec tests)

--- a/app/assets/stylesheets/global/page.css.scss
+++ b/app/assets/stylesheets/global/page.css.scss
@@ -100,3 +100,9 @@ section.page-preview {
 #static_page_title .mercury-textarea {
   width: 125%;
 }
+
+.three-button-row {
+  div {
+    margin-bottom: 1em;
+  }
+}
