--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -8,21 +8,24 @@
     <div class="tab-pane active" id="statistics">
       <h3>Statistics</h3>
 
-      <div>
-        <p><%= @stats[:articles][:count] %> Articles Published</p>
+      <div class="row three-button-row">
+        <div class='co-lg-4 col-md-4 col-sm-4'>
+            <%= link_to "#{@stats[:articles][:count]} Articles Published", "#", class: 'btn btn-primary btn-lg btn-block', title: "articles" %> </div>
 
-        <p><%= @stats[:projects][:count] %> Active Projects</p>
+        <div class='co-lg-4 col-md-4 col-sm-4'>
+            <%= link_to "#{@stats[:projects][:count]} Active Projects", "#", class: 'btn btn-primary btn-lg btn-block', title: "projects" %></div>
 
-        <p><%= @stats[:members][:count] %> AgileVentures Members</p>
+        <div class='co-lg-4 col-md-4 col-sm-4'>
+            <%= link_to "#{@stats[:documents][:count]} Documents Created", "#", class: 'btn btn-primary btn-lg btn-block', title: "documents" %></div>
 
-        <p><%= @stats[:documents][:count] %> Documents Created</p>
+        <div class='co-lg-4 col-md-4 col-sm-4'>
+            <%= link_to "#{@stats[:pairing_minutes][:value]} Pair Programming Minutes", "#", class: 'btn btn-primary btn-lg btn-block', title: "pair-minutes" %></div>
 
-        <p><%= @stats[:pairing_minutes][:value] %> Pair Programming Minutes</p>
-
-        <p><%= @stats[:scrum_minutes][:value] %> Scrum Minutes</p>
+        <div class='co-lg-4 col-md-4 col-sm-4'>
+            <%= link_to "#{@stats[:scrum_minutes][:value]} Scrum Minutes", "#", class: 'btn btn-primary btn-lg btn-block', title: "scrum-minutes" %></div>
       
-        <%= link_to "#{@stats[:members][:count]} members", "#", title: "members" %>
-
+        <div class='co-lg-4 col-md-4 col-sm-4'>
+            <%= link_to "#{@stats[:members][:count]} AgileVentures Members", "#", class: 'btn btn-primary btn-lg btn-block', title: "members" %></div>
       </div>
 
 
